# HomeMadeCompiler

./: .gitignore  CMakeLists.txt  GenAssem.h  IRNode.cpp  buffer_read.h  main.cpp  test.txt  token.cpp
code_gen/: CMakeLists.txt  QuadCodeGen.cpp  QuadCodeGen.h
lex_and_parse/: CMakeLists.txt  IRNode.cpp  IRNode.h  buffer_read.h  token.cpp  token.h
test_cases/: BitwiseCalculation.txt  CMakeLists.txt  ReverseInt.txt  ReverseList.txt  RomanToInt.txt  test_main.cpp
